2006-06-27  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c: fixed Cairo::VERSION.

2006-06-25  Kouhei Sutou  <kou@cozmixng.org>

	* README, packages/cairo/ext/extconf.rb: supported only 1.1.10 or
	higher.

	* packages/cairo/ext/rb_cairo_constants.c: supported
	CAIRO_FORMAT_RGB16_565.

	* packages/cairo/ext/rb_cairo_surface.c:
	  - supported cairo_surface_get_content(),
	    cairo_surface_set_fallback_resolution(),
	    cairo_image_surface_get_data(),
	    cairo_image_surface_get_format() and
	    cairo_image_surface_get_stride().
	  - removed cairo_ps_surface_set_dpi(),
	    cairo_pdf_surface_set_dpi() and cairo_svg_surface_set_dpi()
	    support.

	* samples/png.rb: added Cairo::ImageSurface#data sample.

2006-06-01  Kouhei Sutou  <kou@cozmixng.org>

	* samples/text2.rb: added an example that output PS/PDF/SVG for
	input text.

2006-05-31  Kouhei Sutou  <kou@cozmixng.org>

	* README, packages/cairo/ext/extconf.rb: supported only 1.1.6 or
	higher.

	* packages/cairo/ext/rb_cairo_context.c: supported
	cairo_push_group(), cairo_push_group_with_content(),
	cairo_pop_group(), cairo_pop_group_to_source() and
	cairo_get_group_target().

	* packages/cairo/ext/rb_cairo_exception.c: supported
	CAIRO_STATUS_INVALID_DSC_COMMENT.

	* packages/cairo/ext/rb_cairo_surface.c: supported
	cairo_surface_get_device_offset().

2006-05-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/lib/cairo.rb: fixed typo.

2006-05-02  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c (Cairo::MINOR_VERSION): fixed
	cairo_version() decoding bug.

	* README, packages/cairo/ext/extconf.rb: supported only 1.1.2 or
	higher.

	* packages/cairo/ext/rb_cairo_surface.c: supported
	cairo_surface_get_type().

	* packages/cairo/ext/rb_cairo_scaled_font.c: supported
	cairo_scaled_font_get_type(), cairo_scaled_font_text_extents(),
	cairo_scaled_font_get_font_face(),
	cairo_scaled_font_get_font_matrix(),
	cairo_scaled_font_get_ctm() and